--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,13 +28,13 @@ services:
     networks:
       - infra-network
   db:
-    image: mysql:5.7
+    build: 
+      context: './.docker/mysql'
+      dockerfile: 'Dockerfile'
     command: --innodb-use-native-aio=0
     container_name: db
     restart: always
     tty: true
-    volumes:
-      - ./.docker/mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
